# south-bay-specials

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
apis/: admin.py  constants.py  serializers.py  urls.py  views.py
compose/: Dockerfile  docker-compose.yml
compose/envs/: .env.template
compose/services/: Dockerfile  run-setup.sh  start-celery.sh  start-django.sh
compose/services/proxy/: traefik.yml
locations/: models.py  serializers.py  urls.py  views.py
locations/migrations/: 0001_initial.py  0002_location_google_url.py
scripts/: create_default_admin.py  load_specials_from_file.py
south_bay_specials/: asgi.py  settings.py  urls.py  wsgi.py
specials/: admin.py  apps.py  choices.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
specials/migrations/: 0001_initial.py  0002_alter_special_limitations.py
